<resources>
    <string name="app_name">Feria Carnaval</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="camara">Camara</string>
    <string name="premios">Premios</string>
    <string name="men">Menú</string>
    <string name="QR">QR</string>
    <string name="eventos">Eventos</string>
    <string name="gastronom_a">Gastronomía</string>
    <string name="stands">Stands</string>
    <string name="puntos">Puntos</string>
    <string name="lector_de_qr">LECTOR DE QR</string>
    <string name="Tragos" />
    <string name="Tapeos" />
    <string name="Burger">Burger</string>
    <string name="picadas">Picadas</string>
    <string name="bebidas">Bebidas</string>
    <string name="stand_1">Stand 1</string>
    <string name="stand_2">STAND 2</string>
    <string name="evento_2">Evento 2</string>
    <string name="ingresar">Ingresar</string>
    <string name="todo">TODO</string>

    <!-- Camera X -->
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="state_badge_label">Feria Carnaval</string>
</resources>