<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.MenuPrincipalActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/Tragos"
        android:layout_width="372dp"
        android:layout_height="136dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Drinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="10dp"
            android:gravity="bottom|end"
            android:text="@string/bebidas"
            android:textSize="18sp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Tapeos"
        android:layout_width="372dp"
        android:layout_height="136dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        app:cardBackgroundColor="#009688"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871">

        <TextView
            android:id="@+id/Picadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/picadas"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:labelVisibilityMode="selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation" />

    <androidx.cardview.widget.CardView
        android:id="@+id/Hamburguesas"
        android:layout_width="372dp"
        android:layout_height="136dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        app:cardBackgroundColor="#009688"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/Tapeos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tragos">

        <TextView
            android:id="@+id/Burger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Burger"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>